# manifestservice

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Pipfile  README.md  build_openapi.py  clean.sh  config.json  dockerrun.bash  pyproject.toml  requirements.txt  run.py  setup.py
.github/: labeler.yml
.github/workflows/: ci.yaml  ci.yml  integration_tests.yaml  test.yaml
deployment/nginx/: uwsgi.conf
deployment/uwsgi/: uwsgi.ini  wsgi.py
deployment/wsgi/: gunicorn.conf.py  wsgi.py
docs/: credentials_breaking_change.md  quickstart_helm.md
manifest_service/: api.py  dev_settings.py  errors.py
manifest_service/manifests/: __init__.py
manifestservice/: api.py  config.py  dependencies.py  dev_settings.py  errors.py  main.py  schemas.py
manifestservice/auth/: __init__.py
manifestservice/manifests/: __init__.py
manifestservice/routers/: __init__.py  manifests.py
manifestservice/services/: __init__.py  s3.py
openapi/: README.md  app_info.py  openapi.json  swagger.yaml
tests/: app_test.py  broken_s3_test.py  ci_setup.sh  cohorts_test.py  conftest.py  manifests_test.py  metadata_test.py
